bases/kudo/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: nginx-ingress
spec:
  rules:
    - host: kudo.co
      http:
        paths:
          - backend:
              serviceName: nginx-svc
              servicePort: 80
          - backend:
              serviceName: nginx-svc
              servicePort: 80
            path: /hello-kudo
